--- a/helloworld-angularjs/index.html
+++ b/helloworld-angularjs/index.html
@@ -1,6 +1,6 @@
 <html ng-app>
 <head>
-	<script src="lib/angular.js"></script>
+	<script src="bower_components/angular/angular.js"></script>
 	<script src="js/controller.js"></script>
 </head>
 <body>
